crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__unclosed_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/unclosed_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..28,
        body: [
            Expr(
                StmtExpr {
                    range: 0..7,
                    value: Call(
                        ExprCall {
                            range: 0..7,
                            func: Name(
                                ExprName {
                                    range: 0..4,
                                    id: "call",
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..7,
                                args: [
                                    Name(
                                        ExprName {
                                            range: 5..6,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                            },
                        },
                    ),
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    range: 9..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: "foo",
                        range: 13..16,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 16..18,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            StmtPass {
                                range: 24..28,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | call(x,
2 | 
3 | def foo():
  | ^^^ Syntax Error: Expected an expression or a ')'
4 |     pass
  |


  |
3 | def foo():
4 |     pass
  |          Syntax Error: unexpected EOF while parsing
  |
